nenolod     2005/11/06 05:26:53 UTC	(20051106-3527)
  Log:
  use mysql_library_init() to make sure we are coming up properly

  Changes:	Modified:
  +51 -64	trunk/backend/mysql.c (File Modified) 


alambert    2005/11/06 04:14:43 UTC	(20051106-3525)
  Log:
  XMLRPC: change e-mail error message

  Changes:	Modified:
  +1 -1		trunk/modules/xmlrpc/account.c (File Modified) 


alambert    2005/11/06 04:10:33 UTC	(20051106-3523)
  Log:
  XMLRPC: properly quit on error -7 (if first eligible function returns XMLRPC_STOP

  Changes:	Modified:
  +2 -1		trunk/src/xmlrpc.c (File Modified) 


nenolod     2005/11/06 03:05:01 UTC	(20051106-3521)
  Log:
  beu's escape_string() routine was the reason why mysql did not work properly

  Changes:	Modified:
  +38 -39	trunk/backend/mysql.c (File Modified) 


alambert    2005/11/06 03:02:04 UTC	(20051106-3519)
  Log:
  Honor the SECURE option

  Changes:	Modified:
  +8 -0		trunk/src/ptasks.c (File Modified) 


nenolod     2005/11/06 02:07:44 UTC	(20051106-3517)
  Log:
  Malformed query caused memory corruption here.

  Changes:	Modified:
  +1 -1		trunk/backend/mysql.c (File Modified) 


nenolod     2005/11/06 02:04:17 UTC	(20051106-3515)
  Log:
  Don't use TRUNCATE under MySQL -- it's not transaction safe.

  Changes:	Modified:
  +8 -10	trunk/backend/mysql.c (File Modified) 


alambert    2005/11/06 01:58:47 UTC	(20051106-3513)
  Log:
  XMLRPC: test.method improvement

  Changes:	Modified:
  +6 -1		trunk/modules/xmlrpc/main.c (File Modified) 


alambert    2005/11/06 01:49:43 UTC	(20051106-3511)
  Log:
  XMLRPC: be sure we error out.

  Changes:	Modified:
  +2 -1		trunk/src/xmlrpc.c (File Modified) 


alambert    2005/11/06 01:40:16 UTC	(20051106-3509)
  Log:
  XMLRPC: allow functions to be called without arguments, per spec

  Changes:	Modified:
  +0 -1		trunk/doc/XMLRPC (File Modified) 
  +9 -17	trunk/src/xmlrpc.c (File Modified) 


alambert    2005/11/06 01:33:33 UTC	(20051106-3507)
  Log: